# oDPM

./: .gitignore  CMakeLists.txt  main.cpp  pyproject.toml  readme.md  validation.cpp
analysis/: analysis.ipynb  analysis.py
cmake/: CodeCoverage.cmake  DependenciesConfig.cmake  FlagsConfig.cmake  LanguageStandardConfig.cmake  LinkTimeOptimizationConfig.cmake  ProfileGuidedOptimization.cmake  SystemPackagesConfig.cmake
include/: beams.h  constants.h  electron_tables.h  elementary_functions.h  g4_utils.h  geometry.h  goudsmit_saunderson.h  initialise_tables.h  linear_interpolator.h  materials.h  particle_queue.h  particles.h  photon_tables.h  physics.h  random.h  run.h  spline_interpolator.h  types.h  utils.h  voxel.h  walkers_approximator.h
lib/dicomReader/: CMakeLists.txt
lib/dicomReader/include/: DicomFileCT.hh  DicomFileMgr.hh
lib/dicomReader/src/: DicomFileCT.cc  DicomFileMgr.cc
python/: CMakeLists.txt  pyodpm_ext.cpp
python/pyodpm/: __init__.py
src/: electron_tables.cpp  g4_utils.cpp  geometry.cpp  goudsmit_saunderson.cpp  initialise_tables.cpp  materials.cpp  photon_tables.cpp  physics.cpp  splines.cpp  walkers_approximator.cpp
tests/: CMakeLists.txt  ksTest.cpp
tests/cpu/: CMakeLists.txt  electron_tracking_tests.cpp  geometry_tests.cpp  photon_simulation_tests.cpp  simulation_tests.cpp  table_tests.cpp  validation_tests.cpp
tests/gpu/: CMakeLists.txt  electron_tracking_tests.cu  geometry_tests.cu  photon_simulations_tests.cu  simulation_tests.cu  table_tests.cu
tests/include/: ksTest.h  test_utils.h
validation/: CMakeLists.txt
validation/include/: DPMG4Run.h
validation/src/: DPMG4Run.cpp
