[build-system]
requires = [
    "cmake>=3.19",
    "numpy>=1.21.2",
    "scikit-build-core >=0.4.3",
    "ninja; platform_system!='Windows'"
]
build-backend = "scikit_build_core.build"

[project]
name = "pyopmc"
version = "0.0.1"
description = "Python bindings for the ODPM C++ library"
readme = "readme.md"
requires-python = ">=3.8"
authors = [
    { name = "Marco Barbone", email = "m.barbone19@imperial.ac.uk" },
]
classifiers = [
    "License :: GNU",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
cmake.targets = ["pyodpm_ext"]
cmake.args = ['-DCMAKE_C_COMPILER:STRING=/usr/bin/gcc-12',
              '-DCMAKE_CXX_COMPILER:STRING=/usr/bin/g++-12',
              '-DSKBUILD:BOOL=ON']
wheel.packages = ["python/pyodpm"]
wheel.exclude = ["**.pyx"]
# Setuptools-style build caching in a local directory
build-dir = "pip-build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.8+
wheel.py-api = "cp38"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
